
== 0.2.1: 2009-8-12
 * Added NSFetchedResultsControllerSortedObject
 * Fixed font size

== 0.2.0: 2009-8-6

 * Added NSManagedObjectFind
 * Added ISFetchRequestCondition
 * Added NSSortDescriptorExtension
 * Added NSManagedObjectFetch
 
== 0.1.3: 2009-8-3

 * Added NSManagedObjectContextCreation.
 * Added NSManagedObjectCreation.
   To create a NSManagedObject instance easily.
   
 * NSManagedObjectContextDefaultContext
   Fixed memory leaks

== 0.1.2: 2009-8-2

 * Added NSManagedObjectContextDefaultContext.
   To get the NSManagedObjectContext easily.

== 0.1.1: 2009-8-1

  * Added NSErrorExtension and NSErrorCoreDataExtension

== 0.1.0: 2009-7-30

  * Initial release on Github.